mejora hacia el boton de copiado antes se sobreponia en los textos ahora se le dio mejor formato y se ajusto para los textos

--- a/css/cards.css
+++ b/css/cards.css
@@ -72,11 +72,11 @@ padding: 0 1rem;
 
 
 .copy-btn {
-  padding: 10px 15px;
+  padding: 0.4rem 2rem;
   background-color: #4CAF50;
   color: white;
   border: none;
-  border-radius: 5px;
+  border-radius: 0 10px 0 5px;
   cursor: pointer;
   position: absolute;
   top: 1px;
