--- a/css/cards.css
+++ b/css/cards.css
@@ -101,11 +101,43 @@ padding: 0 1rem;
 }
 
 .selected-card{
-  border-color: magenta ;
+  border-color: royalblue ;
   border-style: dotted;
   transform: scale(1.1, 1.1);
 }
 
 .none {
   display: none;
+}
+
+.btn-content{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 1;
+  text-decoration: none;
+  color: #333333;
+  font-size: 18px;
+  border-radius: 0px;
+  width: 100px;
+  height: 40px;
+  font-weight: bold;
+  border: 2px solid #333333;
+  transition: 0.3s;
+  box-shadow: 5px 5px 0px 0px rgba(51, 51, 51, 1);
+  background-color: #ffffff;
+  margin: 20px;
+}
+
+.btn:hover {
+  box-shadow: 0 0 #333;
+  color: #fff;
+  background-color: #333;
 }
