--- a/css/style.css
+++ b/css/style.css
@@ -7,35 +7,67 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #1e3a45;
+  justify-content: center;
+  background-color: #073b4c;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 /* Estilos del encabezado */
 header {
-  background-color: #A8E6CF;
+  background: linear-gradient(
+    rgba(164, 254, 255, 0.6),
+    rgba(0, 182, 196, 0.6));
+  backdrop-filter: blur(10px); /* Efecto de desenfoque */
+  -webkit-backdrop-filter: blur(30px);
   padding-bottom: 15px;
   text-align: center;
+  text-shadow: 0 1px 0 #ddd, 0 2px 0 #ccc;
   width: 100%;
   height: 100%;
-  font-size: 16px;
+  font-size: 20px;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 /* Estilos del botón Go Home */
 .go-home {
-  background-color: #ffffff;
+  /* background-color: #ffffff;
   color: #4caf50;
   border: 2px solid #4caf50;
   padding: 10px 20px;
   text-decoration: none;
   font-size: 16px;
   border-radius: 5px;
-  transition: background-color 0.3s ease, color 0.3s ease;
+  transition: background-color 0.3s ease, color 0.3s ease; */
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 1;
+  text-decoration: none;
+  color: #333333;
+  font-size: 18px;
+  border-radius: 0px;
+  width: 100px;
+  height: 40px;
+  font-weight: bold;
+  border: 2px solid #333333;
+  transition: 0.3s;
+  box-shadow: 5px 5px 0px 0px rgba(51, 51, 51, 1);
+  background-color: #ffffff;
+  margin: 10px;
 }
 
 /* Efecto al pasar el mouse sobre el botón */
 .go-home:hover {
-  background-color: #4caf50;
-  color: white;
+  /* background-color: #4caf50;
+  color: white; */
+  box-shadow: 0 0 #333;
+  color: #fff;
+  background-color: #333;
 }
 .card-study{
   width: 90%;
